# daemons

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.app.yaml  Taskfile.yml  docker-compose.yaml  pyproject.toml
daemons/: cli.py  config.py  server.py
daemons/agents/argus/: __init__.py  smol.py
daemons/evals/agrus/: config.yaml  eval.py
daemons/tools/: jira.py
daemons/web/: argus.py
